syntax = "proto3";

package c1.connector.v2;

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

// ActiveSync is an annotation is used by the session cache.
message ActiveSync {
  string id = 1;
}
