syntax = "proto3";

package c1.connector.v2;

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service EventService {
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {}
}

message Event {
  google.protobuf.Timestamp occurred_at = 1;
  google.protobuf.Any data = 2;
  repeated google.protobuf.Any annotations = 3;
}

message ListEventsRequest {
  google.protobuf.Timestamp after = 1;

  uint32 page_size = 2 [
    (validate.rules).uint32 = {
      ignore_empty: true
      lte: 250
    }
  ];
  repeated google.protobuf.Any annotations = 3;
}

message ListEventsResponse {
  repeated Event events = 1;
  repeated google.protobuf.Any annotations = 2;
}
